# simplecuda

./: CMakeLists.txt  README.md
include/: cuda_utils.h
src/: hello_world.cu
